--- a/style.css
+++ b/style.css
@@ -42,10 +42,13 @@ h4 {
 }
 
 #product-list #selected-border {
-	border: 10px solid red;
+	border: 10px solid rgba(255, 255, 255, 0.85);
 	z-index: 10;
 	position: absolute;
 	background: none;
+	border-radius: 2px;
+	box-shadow: inset 0px 0px 25px 0px rgba(50, 50, 50, 0.5),
+				0px 0px 10px 0px rgba(70, 70, 70, 0.5);
 }
 
 .price {
